fix: Correction du Content-Type pour imagesOrder dans updateImages